fixes layout issues with rows

--- a/styles/base.less
+++ b/styles/base.less
@@ -15,6 +15,10 @@
 ***************************************************/
 
 @media screen and (max-width: 48em) {
+  .row.sqs-row {
+    // max-width: 100%;
+    // margin: 0;
+  }
   @import 'sqs-grid-breaker';
 }
 
