--- a/styles/critical/critical.less
+++ b/styles/critical/critical.less
@@ -16,7 +16,22 @@
 ** Globally set box-sizing to border box
 ** per bootstrap-grid documentation.
 ===============================*/
-* { box-sizing: border-box; }
+/* Bootstrap grid framework
+** Globally set box-sizing to border box
+** per bootstrap-grid documentation.
+===============================*/
+*, *::after, *::before { box-sizing: border-box; }
+.container {
+  .row {
+    margin: 0; // give zero by default to fix layout issues with squarespace rows
+    &:not(.sqs-row) { // add space to sides of rows outside squarespace layouts
+      // margin-left: -17px !important;
+      // margin-right: -17px !important;
+      padding-left: 17px;
+      padding-right: 17px;
+    }
+  }
+}
 @import (inline) 'node_modules/bootstrap-grid/dist/grid.css';
 
 /* Animate.css framework
